Fix appearances on mobile

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,5 +1,5 @@
 .hero {
-    min-height: 25vh;
+    /* min-height: 25vh; */
     display: flex;
     flex-direction: column;
     justify-content: center;    
@@ -30,7 +30,7 @@
 }
 
 .countdown-wrapper {
-    margin: 15vh 0;
+    margin-top: 14vh;
 }
 
 .countdown-intro,
